--- a/.github/workflows/codacy-workflow.yml
+++ b/.github/workflows/codacy-workflow.yml
@@ -1,6 +1,12 @@
 name: Codacy Analysis CLI
 
-on: ["push"]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   codacy-analysis-cli:
