--- a/.github/workflows/codacy-workflow.yml
+++ b/.github/workflows/codacy-workflow.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Run Codacy Analysis CLI
         uses: codacy/codacy-analysis-cli-action@master
         with:
-          run-staticcheck: "true"
+          run-staticcheck: true
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           upload: true
           max-allowed-issues: 2147483647
