--- a/.github/workflows/codacy-workflow.yml
+++ b/.github/workflows/codacy-workflow.yml
@@ -20,6 +20,7 @@ jobs:
         uses: codacy/codacy-analysis-cli-action@master
         with:
           run-staticcheck: true
+          run-gosec: false
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           upload: true
           max-allowed-issues: 2147483647
