--- a/.github/workflows/codacy-workflow.yml
+++ b/.github/workflows/codacy-workflow.yml
@@ -1,12 +1,6 @@
 name: Codacy Analysis CLI
 
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+on: ["push"]
 
 jobs:
   codacy-analysis-cli:
