--- a/.github/workflows/codacy-workflow.yml
+++ b/.github/workflows/codacy-workflow.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Run Codacy Analysis CLI
         uses: codacy/codacy-analysis-cli-action@master
         with:
+          tool: ""
           run-staticcheck: true
-          run-gosec: true
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           upload: true
           max-allowed-issues: 2147483647
