--- a/.github/workflows/codacy-workflow.yml
+++ b/.github/workflows/codacy-workflow.yml
@@ -14,8 +14,7 @@ jobs:
         uses: codacy/codacy-analysis-cli-action@master
         with:
           run-staticcheck: true
-          run-gosec: true
-          run-docker-tools: false
+          run-gosec: false
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           upload: true
           max-allowed-issues: 2147483647
