--- a/.github/workflows/codacy-workflow.yml
+++ b/.github/workflows/codacy-workflow.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           run-staticcheck: true
           run-gosec: true
+          run-docker-tools: false
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           upload: true
           max-allowed-issues: 2147483647
