--- a/.github/workflows/codacy-workflow.yml
+++ b/.github/workflows/codacy-workflow.yml
@@ -19,3 +19,8 @@ jobs:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           upload: true
           max-allowed-issues: 2147483647
+          
+      - name: Run Git status
+        shell: bash
+        run: |
+          git status
